payment-service 추가, kafka 추가